<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="110dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/barcode"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etBarcode"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="number"
                android:gravity="center"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:onClick="onClickSearch"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/productName"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textImeMultiLine"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:text="@string/expDate"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvExpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/calendar"
                android:onClick="onClickCalendar"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/amount"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="number"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/lightBlue"
        android:onClick="onClickCancel"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:text="@string/save"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/lightBlue"
        android:onClick="onClickSave"/>

</RelativeLayout>